# react-annotate-demo-backend

./: .gitignore  pyproject.toml  serv.py  vercel.json
data/: instance_coco_val2017_zity_fmt_mini.json  keypoints_coco_val2017_zity_fmt_mini.json
